--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
+    "dev": "webpack-dev-server",
     "start": "node server/server.js",
     "server": "",
-    "build": "cd client && npm install && npm run build && cd ../server && npm install",
+    "build": "webpack --mode production",
     "install": "",
     "client": ""
   },
@@ -17,12 +17,27 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "code-mirror-themes": "^1.0.0",
+    "idb": "^6.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/runtime": "^7.15.3",
+    "babel-loader": "^8.2.2",
     "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^10.2.1",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^0.11.1",
     "nodemon": "^2.0.4",
-    "webpack": "^5.66.0"
+    "style-loader": "^3.2.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-pwa-manifest": "^4.3.0",
+    "webpack": "^5.66.0",
+    "workbox-webpack-plugin": "^6.2.4"
   }
 }
